--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-Django==1.7.1
-beautifulsoup4==4.3.2
-django-admin-bootstrapped==2.3.1
-django-bootstrap3==5.0.3
-numpy==1.9.2
-pandas==0.15.2
-python-dateutil==2.4.1
-pytz==2014.10
+Django==1.8.2
+Pillow==2.8.1
+django-admin-bootstrapped==2.5.0
+django-debug-toolbar==1.3.0
+django-mptt==0.7.4
+django-simple-captcha==0.4.5
 six==1.9.0
-wheel==0.24.0
+sqlparse==0.1.15
