--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Django==1.8.2
-Pillow==2.8.1
 django-admin-bootstrapped==2.5.0
+django-bootstrap3==5.4.0
 django-debug-toolbar==1.3.0
 django-mptt==0.7.4
 django-simple-captcha==0.4.5
+Pillow==2.8.1
 six==1.9.0
 sqlparse==0.1.15
